@@ -1,6 +1,7 @@
 package org.openmetadata.service.search;
 
 import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
+import static org.openmetadata.search.IndexMapping.INDEX_NAME_SEPARATOR;
 import static org.openmetadata.service.Entity.AGGREGATED_COST_ANALYSIS_REPORT_DATA;
 import static org.openmetadata.service.Entity.ENTITY_REPORT_DATA;
 import static org.openmetadata.service.Entity.FIELD_DISPLAY_NAME;
@@ -46,7 +47,6 @@ import static org.openmetadata.service.search.SearchConstants.SERVICE_ID;
 import static org.openmetadata.service.search.SearchConstants.TAGS_FQN;
 import static org.openmetadata.service.search.SearchConstants.TEST_SUITES;
 import static org.openmetadata.service.search.SearchUtils.isConnectedVia;
-import static org.openmetadata.service.search.models.IndexMapping.INDEX_NAME_SEPARATOR;
 import static org.openmetadata.service.util.EntityUtil.compareEntityReferenceById;
 import static org.openmetadata.service.util.EntityUtil.isNullOrEmptyChangeDescription;
 
@@ -87,6 +87,7 @@ import org.openmetadata.schema.api.search.SearchSettings;
 import org.openmetadata.schema.dataInsight.DataInsightChartResult;
 import org.openmetadata.schema.entity.classification.Tag;
 import org.openmetadata.schema.entity.data.QueryCostSearchResult;
+import org.openmetadata.schema.exception.JsonParsingException;
 import org.openmetadata.schema.search.AggregationRequest;
 import org.openmetadata.schema.search.SearchRequest;
 import org.openmetadata.schema.service.configuration.elasticsearch.ElasticSearchConfiguration;
@@ -99,19 +100,21 @@ import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.FieldChange;
 import org.openmetadata.schema.type.TagLabel;
 import org.openmetadata.schema.type.UsageDetails;
+import org.openmetadata.schema.utils.JsonUtils;
+import org.openmetadata.search.IndexMapping;
+import org.openmetadata.search.IndexMappingLoader;
 import org.openmetadata.service.Entity;
-import org.openmetadata.service.exception.UnhandledServerException;
+import org.openmetadata.service.events.lifecycle.EntityLifecycleEventDispatcher;
+import org.openmetadata.service.events.lifecycle.handlers.SearchIndexHandler;
 import org.openmetadata.service.jdbi3.EntityRepository;
 import org.openmetadata.service.search.elasticsearch.ElasticSearchClient;
 import org.openmetadata.service.search.indexes.SearchIndex;
-import org.openmetadata.service.search.models.IndexMapping;
 import org.openmetadata.service.search.nlq.NLQService;
 import org.openmetadata.service.search.nlq.NLQServiceFactory;
 import org.openmetadata.service.search.opensearch.OpenSearchClient;
 import org.openmetadata.service.security.policyevaluator.SubjectContext;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.FullyQualifiedName;
-import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.workflows.searchIndex.ReindexingUtil;
 
 @Slf4j
@@ -134,7 +137,8 @@ public class SearchRepository {
           FIELD_DISPLAY_NAME);
   private final List<String> propagateFields = List.of(Entity.FIELD_TAGS);
 
-  @Getter private final ElasticSearchConfiguration elasticSearchConfiguration;
+  @Getter private final ElasticSearchConfiguration searchConfiguration;
+  @Getter private final int maxDBConnections;
 
   @Getter private final String clusterAlias;
 
@@ -151,23 +155,39 @@ public class SearchRepository {
 
   protected NLQService nlqService;
 
-  public SearchRepository(ElasticSearchConfiguration config) {
-    elasticSearchConfiguration = config;
-    searchClient = buildSearchClient(config);
+  public SearchRepository(ElasticSearchConfiguration config, int maxDBConnections) {
+    this.maxDBConnections = maxDBConnections;
+    searchConfiguration = config;
+    searchClient = buildSearchClient(searchConfiguration);
     searchIndexFactory = buildIndexFactory();
     language =
-        config != null && config.getSearchIndexMappingLanguage() != null
-            ? config.getSearchIndexMappingLanguage().value()
+        searchConfiguration != null && searchConfiguration.getSearchIndexMappingLanguage() != null
+            ? searchConfiguration.getSearchIndexMappingLanguage().value()
             : "en";
-    clusterAlias = config != null ? config.getClusterAlias() : "";
+    clusterAlias = searchConfiguration != null ? searchConfiguration.getClusterAlias() : "";
     loadIndexMappings();
+    registerSearchIndexHandler();
+  }
+
+  /**
+   * Register the SearchIndexHandler as the primary handler for search indexing operations.
+   * This handler will handle the actual search indexing when entities are created/updated/deleted.
+   */
+  private void registerSearchIndexHandler() {
+    try {
+      SearchIndexHandler searchHandler = new SearchIndexHandler(this);
+      EntityLifecycleEventDispatcher.getInstance().registerHandler(searchHandler);
+      LOG.info("Successfully registered SearchIndexHandler for entity lifecycle events");
+    } catch (Exception e) {
+      LOG.error("Failed to register SearchIndexHandler", e);
+    }
   }
 
   public SearchClient getSearchClient() {
     if (searchClient == null) {
       synchronized (SearchRepository.class) {
         if (searchClient == null) {
-          searchClient = buildSearchClient(elasticSearchConfiguration);
+          searchClient = buildSearchClient(searchConfiguration);
         }
       }
     }
@@ -175,32 +195,8 @@ public class SearchRepository {
   }
 
   private void loadIndexMappings() {
-    Set<String> entities;
-    entityIndexMap = new HashMap<>();
-    try (InputStream in = getClass().getResourceAsStream("/elasticsearch/indexMapping.json")) {
-      assert in != null;
-      JsonObject jsonPayload = JsonUtils.readJson(new String(in.readAllBytes())).asJsonObject();
-      entities = jsonPayload.keySet();
-      for (String s : entities) {
-        entityIndexMap.put(
-            s, JsonUtils.readValue(jsonPayload.get(s).toString(), IndexMapping.class));
-      }
-    } catch (Exception e) {
-      throw new UnhandledServerException("Failed to load indexMapping.json", e);
-    }
-    try (InputStream in2 =
-        getClass().getResourceAsStream("/elasticsearch/collate/indexMapping.json")) {
-      if (in2 != null) {
-        JsonObject jsonPayload = JsonUtils.readJson(new String(in2.readAllBytes())).asJsonObject();
-        entities = jsonPayload.keySet();
-        for (String s : entities) {
-          entityIndexMap.put(
-              s, JsonUtils.readValue(jsonPayload.get(s).toString(), IndexMapping.class));
-        }
-      }
-    } catch (Exception e) {
-      LOG.warn("Failed to load indexMapping.json");
-    }
+    IndexMappingLoader mappingLoader = IndexMappingLoader.getInstance();
+    entityIndexMap = mappingLoader.getIndexMapping();
   }
 
   public SearchClient buildSearchClient(ElasticSearchConfiguration config) {
@@ -320,31 +316,48 @@ public class SearchRepository {
     return null;
   }
 
-  public void createEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      try {
-        IndexMapping indexMapping = entityIndexMap.get(entityType);
-        SearchIndex index = searchIndexFactory.buildIndex(entityType, entity);
-        String doc = JsonUtils.pojoToJson(index.buildSearchIndexDoc());
-        searchClient.createEntity(indexMapping.getIndexName(clusterAlias), entityId, doc);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Creating new search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  /**
+   * Create search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void createEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.warn("Entity is null, cannot create index.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    try {
+      IndexMapping indexMapping = entityIndexMap.get(entityType);
+      SearchIndex index = searchIndexFactory.buildIndex(entityType, entity);
+      String doc = JsonUtils.pojoToJson(index.buildSearchIndexDoc());
+      searchClient.createEntity(indexMapping.getIndexName(clusterAlias), entityId, doc);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Creating new search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
-  public void createEntities(List<EntityInterface> entities) {
+  /**
+   * Create search indexes for multiple entities only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void createEntitiesIndex(List<EntityInterface> entities) {
     if (!nullOrEmpty(entities)) {
       // All entities in the list are of the same type
-      String entityType = entities.get(0).getEntityReference().getType();
+      String entityType = entities.getFirst().getEntityReference().getType();
       IndexMapping indexMapping = entityIndexMap.get(entityType);
       List<Map<String, String>> docs = new ArrayList<>();
       for (EntityInterface entity : entities) {
@@ -364,6 +377,16 @@ public class SearchRepository {
             ExceptionUtils.getStackTrace(ie));
       }
     }
+  }
+
+  /**
+   * Create search indexes for multiple entities and dispatch lifecycle events.
+   * This method maintains backward compatibility.
+   */
+  public void createEntities(List<EntityInterface> entities) {
+    // For backward compatibility, just call the index-only method
+    // EntityRepository now handles lifecycle event dispatching
+    createEntitiesIndex(entities);
   }
 
   public void createTimeSeriesEntity(EntityTimeSeriesInterface entity) {
@@ -416,49 +439,61 @@ public class SearchRepository {
     }
   }
 
-  public void updateEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityType = entity.getEntityReference().getType();
-      String entityId = entity.getId().toString();
-      try {
-        IndexMapping indexMapping = entityIndexMap.get(entityType);
-        String scriptTxt = DEFAULT_UPDATE_SCRIPT;
-        Map<String, Object> doc = new HashMap<>();
+  /**
+   * Update search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void updateEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.warn("Entity is null, cannot update index.");
+      return;
+    }
 
-        ChangeDescription incrementalChangeDescription = entity.getIncrementalChangeDescription();
-        ChangeDescription changeDescription;
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
 
-        if (!isNullOrEmptyChangeDescription(incrementalChangeDescription)) {
-          changeDescription = incrementalChangeDescription;
-        } else {
-          changeDescription = entity.getChangeDescription();
-        }
+    String entityType = entity.getEntityReference().getType();
+    String entityId = entity.getId().toString();
+    try {
+      IndexMapping indexMapping = entityIndexMap.get(entityType);
+      String scriptTxt = DEFAULT_UPDATE_SCRIPT;
+      Map<String, Object> doc = new HashMap<>();
 
-        if (changeDescription != null
-            && entity.getChangeDescription() != null
-            && Objects.equals(
-                entity.getVersion(), entity.getChangeDescription().getPreviousVersion())) {
-          scriptTxt = getScriptWithParams(entity, doc, changeDescription);
-        } else {
-          SearchIndex elasticSearchIndex = searchIndexFactory.buildIndex(entityType, entity);
-          doc = elasticSearchIndex.buildSearchIndexDoc();
-        }
-        searchClient.updateEntity(
-            indexMapping.getIndexName(clusterAlias), entityId, doc, scriptTxt);
-        propagateInheritedFieldsToChildren(
-            entityType, entityId, changeDescription, indexMapping, entity);
-        propagateGlossaryTags(entityType, entity.getFullyQualifiedName(), changeDescription);
-        propagateCertificationTags(entityType, entity, changeDescription);
-        propagateToRelatedEntities(entityType, changeDescription, indexMapping, entity);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Updating the search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
+      ChangeDescription incrementalChangeDescription = entity.getIncrementalChangeDescription();
+      ChangeDescription changeDescription;
+
+      if (!isNullOrEmptyChangeDescription(incrementalChangeDescription)) {
+        changeDescription = incrementalChangeDescription;
+      } else {
+        changeDescription = entity.getChangeDescription();
       }
+
+      if (changeDescription != null
+          && entity.getChangeDescription() != null
+          && Objects.equals(
+              entity.getVersion(), entity.getChangeDescription().getPreviousVersion())) {
+        scriptTxt = getScriptWithParams(entity, doc, changeDescription);
+      } else {
+        SearchIndex elasticSearchIndex = searchIndexFactory.buildIndex(entityType, entity);
+        doc = elasticSearchIndex.buildSearchIndexDoc();
+      }
+      searchClient.updateEntity(indexMapping.getIndexName(clusterAlias), entityId, doc, scriptTxt);
+      propagateInheritedFieldsToChildren(
+          entityType, entityId, changeDescription, indexMapping, entity);
+      propagateGlossaryTags(entityType, entity.getFullyQualifiedName(), changeDescription);
+      propagateCertificationTags(entityType, entity, changeDescription);
+      propagateToRelatedEntities(entityType, changeDescription, indexMapping, entity);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Updating the search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
@@ -467,7 +502,16 @@ public class SearchRepository {
     EntityInterface entity =
         entityRepository.get(null, entityReference.getId(), entityRepository.getFields("*"));
     // Update Entity
-    updateEntity(entity);
+    updateEntityIndex(entity);
+  }
+
+  public boolean checkIfIndexingIsSupported(String entityType) {
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    if (indexMapping == null) {
+      LOG.debug("Index mapping is not supported for entity type: {}", entityType);
+      return false;
+    }
+    return true;
   }
 
   public void propagateInheritedFieldsToChildren(
@@ -490,7 +534,8 @@ public class SearchRepository {
             || entityType.equalsIgnoreCase(Entity.MLMODEL_SERVICE)
             || entityType.equalsIgnoreCase(Entity.STORAGE_SERVICE)
             || entityType.equalsIgnoreCase(Entity.SEARCH_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.API_SERVICE)) {
+            || entityType.equalsIgnoreCase(Entity.API_SERVICE)
+            || entityType.equalsIgnoreCase(Entity.DRIVE_SERVICE)) {
           parentMatch = new ImmutablePair<>(SERVICE_ID, entityId);
         } else {
           parentMatch = new ImmutablePair<>(entityType + ".id", entityId);
@@ -729,7 +774,7 @@ public class SearchRepository {
               fieldData.put(field.getName(), JsonUtils.getMap(entityReference));
               scriptTxt.append(" ");
             }
-          } catch (UnhandledServerException e) {
+          } catch (JsonParsingException e) {
             scriptTxt.append(String.format(REMOVE_PROPAGATED_FIELD_SCRIPT, field.getName()));
           }
         }
@@ -751,7 +796,7 @@ public class SearchRepository {
                     field.getName(),
                     field.getName()));
             fieldData.put(field.getName(), newEntityReference);
-          } catch (UnhandledServerException e) {
+          } catch (JsonParsingException e) {
             if (field.getName().equals(Entity.FIELD_TEST_SUITES)) {
               scriptTxt.append(PROPAGATE_TEST_SUITES_SCRIPT);
               fieldData.put(Entity.FIELD_TEST_SUITES, field.getNewValue());
@@ -794,7 +839,7 @@ public class SearchRepository {
               fieldData.put(field.getName(), entityReference);
             }
             scriptTxt.append(" ");
-          } catch (UnhandledServerException e) {
+          } catch (JsonParsingException e) {
             if (field.getName().equals(FIELD_DISPLAY_NAME)) {
               String fieldPath =
                   getFieldPath(entity.getEntityReference().getType(), field.getName());
@@ -821,7 +866,8 @@ public class SearchRepository {
         || entityType.equalsIgnoreCase(Entity.MLMODEL_SERVICE)
         || entityType.equalsIgnoreCase(Entity.STORAGE_SERVICE)
         || entityType.equalsIgnoreCase(Entity.SEARCH_SERVICE)
-        || entityType.equalsIgnoreCase(Entity.API_SERVICE)) {
+        || entityType.equalsIgnoreCase(Entity.API_SERVICE)
+        || entityType.equalsIgnoreCase(Entity.DRIVE_SERVICE)) {
       return "service." + fieldName;
     } else {
       return entityType + "." + fieldName;
@@ -842,23 +888,36 @@ public class SearchRepository {
     }
   }
 
-  public void deleteEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      IndexMapping indexMapping = entityIndexMap.get(entityType);
-      try {
-        searchClient.deleteEntity(indexMapping.getIndexName(clusterAlias), entityId);
-        deleteOrUpdateChildren(entity, indexMapping);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  /**
+   * Delete search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void deleteEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.debug("Entity or EntityReference is null, cannot perform delete.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    try {
+      searchClient.deleteEntity(indexMapping.getIndexName(clusterAlias), entityId);
+      deleteOrUpdateChildren(entity, indexMapping);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
@@ -900,25 +959,38 @@ public class SearchRepository {
     }
   }
 
-  public void softDeleteOrRestoreEntity(EntityInterface entity, boolean delete) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      IndexMapping indexMapping = entityIndexMap.get(entityType);
-      String scriptTxt = String.format(SOFT_DELETE_RESTORE_SCRIPT, delete);
-      try {
-        searchClient.softDeleteOrRestoreEntity(
-            indexMapping.getIndexName(clusterAlias), entityId, scriptTxt);
-        softDeleteOrRestoredChildren(entity.getEntityReference(), indexMapping, delete);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Soft Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  /**
+   * Soft delete or restore search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void softDeleteOrRestoreEntityIndex(EntityInterface entity, boolean delete) {
+    if (entity == null) {
+      LOG.debug("Entity or EntityReference is null, cannot perform soft delete or restore.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    String scriptTxt = String.format(SOFT_DELETE_RESTORE_SCRIPT, delete);
+    try {
+      searchClient.softDeleteOrRestoreEntity(
+          indexMapping.getIndexName(clusterAlias), entityId, scriptTxt);
+      softDeleteOrRestoredChildren(entity.getEntityReference(), indexMapping, delete);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Soft Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
@@ -950,16 +1022,6 @@ public class SearchRepository {
           new ImmutablePair<>(
               REMOVE_TAGS_CHILDREN_SCRIPT,
               Collections.singletonMap("fqn", entity.getFullyQualifiedName())));
-      case Entity.DASHBOARD -> {
-        String scriptTxt =
-            String.format(
-                "if (ctx._source.dashboards.size() == 1) { ctx._source.put('deleted', '%s') }",
-                true);
-        searchClient.softDeleteOrRestoreChildren(
-            indexMapping.getChildAliases(clusterAlias),
-            scriptTxt,
-            List.of(new ImmutablePair<>("dashboards.id", docId)));
-      }
       case Entity.TEST_SUITE -> {
         TestSuite testSuite = (TestSuite) entity;
         if (Boolean.TRUE.equals(testSuite.getBasic())) {
@@ -979,7 +1041,8 @@ public class SearchRepository {
           Entity.PIPELINE_SERVICE,
           Entity.MLMODEL_SERVICE,
           Entity.STORAGE_SERVICE,
-          Entity.SEARCH_SERVICE -> searchClient.deleteEntityByFields(
+          Entity.SEARCH_SERVICE,
+          Entity.DRIVE_SERVICE -> searchClient.deleteEntityByFields(
           indexMapping.getChildAliases(clusterAlias),
           List.of(new ImmutablePair<>("service.id", docId)));
       default -> {
@@ -1004,20 +1067,11 @@ public class SearchRepository {
           Entity.PIPELINE_SERVICE,
           Entity.MLMODEL_SERVICE,
           Entity.STORAGE_SERVICE,
-          Entity.SEARCH_SERVICE -> searchClient.softDeleteOrRestoreChildren(
+          Entity.SEARCH_SERVICE,
+          Entity.DRIVE_SERVICE -> searchClient.softDeleteOrRestoreChildren(
           indexMapping.getChildAliases(clusterAlias),
           scriptTxt,
           List.of(new ImmutablePair<>("service.id", docId)));
-      case Entity.DASHBOARD -> {
-        scriptTxt =
-            String.format(
-                "if (ctx._source.dashboards.size() == 1) { ctx._source.put('deleted', '%s') }",
-                delete);
-        searchClient.softDeleteOrRestoreChildren(
-            indexMapping.getChildAliases(clusterAlias),
-            scriptTxt,
-            List.of(new ImmutablePair<>("dashboards.id", docId)));
-      }
       default -> {
         List<String> indexNames = indexMapping.getChildAliases(clusterAlias);
         if (!indexNames.isEmpty()) {
